--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -3,15 +3,15 @@
 }
 
 .section__title {
-  @apply font-inter text-2xl font-bold text-additionalText dark:text-white;
+  @apply font-merriweather text-2xl font-bold text-mainText dark:text-white;
 }
 
 .section__subtitle {
-  @apply text-main font-playfair text-3xl sm:text-4xl md:text-5xl text-center sm:leading-snug md:leading-snug dark:text-slate-200;
+  @apply text-main font-playfair text-3xl sm:text-4xl md:text-5xl text-center sm:leading-snug md:leading-snug dark:text-white;
 }
 
 .section__description {
-  @apply font-inter text-additionalText md:text-lg md:leading-normal leading-normal dark:text-slate-200;
+  @apply font-poppins text-additionalText md:text-lg md:leading-normal leading-normal dark:text-white;
 }
 
 .scrollbar::-webkit-scrollbar {
